--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -25,6 +25,8 @@
             android:id="@+id/text_your_favorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/_24sp"
+            android:textStyle="bold"
             android:text="@string/your_favorites"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,6 +35,7 @@
             android:id="@+id/recycle_your_favorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@id/text_your_favorites" />
@@ -41,6 +44,9 @@
             android:id="@+id/text_explore_movies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_12dp"
+            android:textSize="@dimen/_24sp"
+            android:textStyle="bold"
             android:text="@string/explore_more_movies"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/recycle_your_favorites" />
@@ -49,6 +55,7 @@
             android:id="@+id/recycleAllMovies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@id/text_explore_movies" />
