--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="_8dp">8dp</dimen>
     <dimen name="_4dp">4dp</dimen>
+    <dimen name="_24sp">24sp</dimen>
+    <dimen name="_12dp">12dp</dimen>
 </resources>
