--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="_4dp">4dp</dimen>
     <dimen name="_24sp">24sp</dimen>
     <dimen name="_12dp">12dp</dimen>
+    <dimen name="_16sp">16sp</dimen>
+    <dimen name="_20sp">20sp</dimen>
+    <dimen name="_0dp">0dp</dimen>
+    <dimen name="_28sp">28sp</dimen>
 </resources>
