--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.PruebaIngresoMoviesWigilabs" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.PruebaIngresoMoviesWigilabs" parent="Base.Theme.PruebaIngresoMoviesWigilabs" />
+
+    <style name="titleDetailMovie" parent="Base.Theme.PruebaIngresoMoviesWigilabs">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="textDetailMovie" parent="Base.Theme.PruebaIngresoMoviesWigilabs">
+        <item name="android:textSize">20sp</item>
+    </style>
 </resources>
