Improve the architecture and package

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="movie"
-            type="com.juanferdev.pruebaingresomovieswigilabs.Movie" />
+            type="com.juanferdev.pruebaingresomovieswigilabs.core.models.Movie" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
