--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -2,13 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.detailmovie.DetailMovieActivity">
+    tools:context=".features.detailmovie.ui.DetailMovieActivity">
 
     <data>
 
         <variable
             name="movie"
-            type="com.juanferdev.pruebaingresomovieswigilabs.Movie" />
+            type="com.juanferdev.pruebaingresomovieswigilabs.core.models.Movie" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
